--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
-.news{
-border:10px solid red;
+body {
+     margin: 0px;   
 }
 
-.news-container{
-border:10 px solid green;
+.news {
+     border: 1px solid red;
+     padding: 20px 0px;
+
 }
-.news-item{
-border: 10 px solid blue;
+.news-container {
+     border: 1 px solid green;
+     width: 1200px;
+     margin: 0px auto;
+}
+
+.news-item {
+     border: 1px solid blue;
 }
