--- a/css/ımages/style.css
+++ b/css/ımages/style.css
@@ -1,22 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+body{
+    margin: 0 px;
+}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+.box-container{
+    width: 1200px;
+    margin: 0px auto;
+    border:1px solid black;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
 
-<body>
+.item{
+    min-height:100px;
+    border:1px solid red;
+    box-sizing:border-box ;
+}
 
-    <div class="box-container">
-        <div class="item">1</div> 
-        <div class="item">2</div> 
-        <div class="item">3</div> 
-        <div class="item">4</div> 
-        <div class="item">5</div> 
-    </div>
-</body>
-</html>
+.second{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 4;
+    grid-row-end: 3;
+}
