--- a/oxu.az/style.css
+++ b/oxu.az/style.css
@@ -25,6 +25,7 @@ main{}
 
 .news-item{
     min-height: 430px;
+    position: relative
 }
 .news-item:hover{
     box-shadow: 0px 0px 10px lightgrey;
@@ -52,8 +53,16 @@ main{}
     display: flex;
     justify-content:center ;
 }
+
 .news-item-date{
     background:#1894A0;
     display:inline-block ;
     padding: 10px;
+    position: absolute;
+    top
+}
+
+.main-naw{
+    background: #00193c;
+    padding: 15px;
 }
