--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -1,42 +1,97 @@
-body{
+body,
+h2,
+h3,
+h1 {
     margin: 0px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.katigori{
+.katigori {
     padding: 70px 0px;
 }
 
-.katigori-container{
-    width: 960px;
+.katigori-container {
+    width: 1200px;
     margin: 0px auto;
 }
 
-.katigori-header{
+.katigori-header {
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-bottom: 30px;
 }
-.katigori-list{
+
+.katigori-header h1 {
+    font-size: 2.5em;
+}
+
+.katigori-header h2 {
+    font-size: 1.2em;
+    color: gray;
+    margin: 20px 0px;
+}
+
+.katigori-list {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.katigori-item{
-    width: 30%;
-    height: 190px;
+
+.katigori-item {
+    width: 32%;
     display: flex;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    padding: 10px;
+    box-sizing: border-box;
+    transition: all .3s linear;
 }
+
+.katigori-item:hover {
+    box-shadow: 0px 0px 10px gray;
+}
+
 .katigori-button {
     margin: 40px 0px;
     display: flex;
     justify-content: center;
 }
-.katigori-button button{
-    background-color: #6255a4;
-    border: 1px solid #6255a4;
-    color:#fff;
+
+.katigori-button button {
+    background-color: #6255A4;
+    color: #fff;
+    border-radius: 10px;
+    padding: 20px 80px;
+    font-size: 1.2em;
+    border: none;
 }
 
-.katigori-item img{
-    width: 150px;
-    margin: 40px 0px 0px 40px;
+.kategori-item-img {
+    width: 100px;
+    height: 100px;
 }
+
+.kategori-item-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.kategori-item-info {
+    margin-left: 10px;
+}
+
+.kategori-item-info h2 {
+    color: #6255A4;
+    padding-top: 20px;
+}
+
+.kategori-item-info h3 {
+    color: gray;
+    padding-top: 20px;
+}
+
+.kategori-item-info h3 span {
+    color: black;
+} 
